<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".onboarding.auth.vendor.createvendorprofile.CreateProfileFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/rasa_medium"
        android:text="@string/get_lyft_d"
        android:textColor="@color/black"
        android:textSize="@dimen/_38ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/create_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/enter_details"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/fname_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/store_name"
        android:paddingStart="@dimen/_45sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_20ssp"
        android:src="@drawable/ic_store"
        app:layout_constraintBottom_toBottomOf="@+id/fname_et"
        app:layout_constraintStart_toStartOf="@+id/fname_et"
        app:layout_constraintTop_toTopOf="@+id/fname_et" />

    <EditText
        android:id="@+id/lname_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/location"
        android:paddingStart="@dimen/_45sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname_et" />

    <ImageView
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20ssp"
        android:src="@drawable/ic_loc_pin"
        app:layout_constraintBottom_toBottomOf="@+id/lname_et"
        app:layout_constraintStart_toStartOf="@+id/lname_et"
        app:layout_constraintTop_toTopOf="@+id/lname_et" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/continue_text"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>