<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".onboarding.auth.password.resetPassword.ResetPasswordFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/rasa_medium"
        android:text="@string/get_lyft_d"
        android:textColor="@color/black"
        android:textSize="@dimen/_38ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/enter_the_new_password"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_45sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_20ssp"
        android:src="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="@+id/new_password_et"
        app:layout_constraintStart_toStartOf="@+id/new_password_et"
        app:layout_constraintTop_toTopOf="@+id/new_password_et" />

    <ImageView
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:src="@drawable/ic_hide_eye"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_et"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_et"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_et" />

    <EditText
        android:id="@+id/confirm_password_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_45sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_et" />

    <ImageView
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_20ssp"
        android:src="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_et"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_et"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/submit"
        android:textSize="@dimen/_14ssp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>